--- a/public/masher.html
+++ b/public/masher.html
@@ -12,7 +12,7 @@ color: #333;
 }
 
 h1,h2,h3,h4,h5,body {
-font-face: Tahoma, "Bitstream Vera Sans", sans-serif;
+font-family: Tahoma, "Bitstream Vera Sans", sans-serif;
 }
 
 #kmashcont {
@@ -50,6 +50,23 @@ margin-left: 20px;
 .masher:hover, .kitten:hover {
 border: 3px #33a solid;
 }
+
+.score {
+background-color: #bbb;
+padding: 5px;
+margin-top: 10px;
+margin-bottom: 5px;
+font-weight: bold;
+line-height: 30px;
+}
+
+#publish {
+border: 1px #333 solid;
+background-color: #ddd;
+height: 30px;
+float: right;
+}
+
 
 </style>
 </head>
