Added weapons to HTML and JS files becaue of fail

--- a/public/masher.html
+++ b/public/masher.html
@@ -50,5 +50,8 @@ width: 600px;
 <h2>Pick your weapon</h2>
 <img class="masher" id="masher1" src="images/spiker-small.png" />
 <img class="masher" id="masher2" src="images/tenderizer-small.png" />
+<img class="masher" id="masher3" src="images/brick-small.png" />
+<img class="masher" id="masher4" src="images/fist-small.png" />
+<img class="masher" id="masher5" src="images/Monty_python_foot-small.png" />
 </body>
 </html>
