Resized banner so it's not derp-sized

--- a/public/masher.html
+++ b/public/masher.html
@@ -35,7 +35,7 @@ width: 600px;
 <body onload="start()">
 
 <img style="display:none;" id="splatter1" src="images/splatter1.png" />
-<img src="images/banner.png" id="banner" />
+<img src="images/banner-600x140.png" id="banner" />
 <div class="kmashcont">
 <canvas id="kittenmasher"> </canvas>
 </div>
