Added square weapon images, changed mouseover transition.

--- a/public/masher.html
+++ b/public/masher.html
@@ -44,7 +44,8 @@ height: 100px;
 .kitten, .masher {
 border: 3px #ccc solid;
 margin-left: 20px;
--webkit-transition: all 0.7s linear;
+-webkit-transition: all 0.7s cubic-bezier(.2,.8,.2,.8);
+-moz-transition: all 0.7s cubic-bezier(.2,.8,.2,.8);
 }
 
 .masher:hover, .kitten:hover {
@@ -90,9 +91,9 @@ float: right;
 
 <img class="masher" id="masher1" src="images/spiker-square.png" />
 <img class="masher" id="masher2" src="images/tenderizer-square.png" />
-<img class="masher" id="masher3" src="images/brick-small.png" />
-<img class="masher" id="masher4" src="images/fist-small.png" />
-<img class="masher" id="masher5" src="images/Monty_python_foot-small.png" />
+<img class="masher" id="masher3" src="images/brick-square.png" />
+<img class="masher" id="masher4" src="images/fist-square.png" />
+<img class="masher" id="masher5" src="images/Monty_python_foot-square.png" />
 
 </body>
 </html>
