Vectorized some bitches! Will replace with Alexvectors if possible

--- a/public/masher.html
+++ b/public/masher.html
@@ -75,7 +75,8 @@ float: right;
 <body onload="start()">
 
 <img style="display:none;" id="splatter1" src="images/splatter1.png" />
-<img src="images/banner-600x140.png" id="banner" />
+<!--<img src="images/banner-600x140.png" id="banner" />-->
+<object data="images/banner-transparent.svg" type="image/svg+xml"></object> 
 <div class="kmashcont">
 <canvas id="kittenmasher"> </canvas>
 </div>
